--- a/Static/style.css
+++ b/Static/style.css
@@ -12,6 +12,10 @@ body {
    background-color: #000000;
 }
 
+.imagem-de-destaque {
+   display: flex;
+   justify-content: center;
+}
 
 .imagem-de-destaque>img{
    object-fit: cover;
@@ -27,61 +31,87 @@ body {
    position: absolute;
    width: 100%;
    height: 100%;
-   background-image: linear-gradient(to right, black, transparent, transparent);
+   background-image: linear-gradient(to right, black, transparent);
    display: flex;
    justify-content: center;
 }
 
-.overlay>div {
-   margin-top: 20px;
+.header {
+   margin-top: 30px;
+   position: absolute;
+   display: grid;
+   grid-template-columns: 8fr 230px 40px;
    width: 80%;
-   height: 100px;
-   display: flex;
+   height: 10%;
+   justify-content: center;
    align-items: center;
-   justify-content: space-between;
+   gap: 40px;
+}
+
+.nav>ul {
    color: white;
-   /* background-color: #fff; */
-}
-
-.nav ul {
-   display: flex;
-   flex-direction: row;
-   gap: 30px;
-   font: 700 50px Poppins;
-   text-transform: uppercase;
    list-style: none;
+   display: flex;
+   gap: 30px;
+   font: 700 30px Poppins;
 }
 
-.sb {
-   background-color: #ffffff42;
-   border-radius: 50px;
-   width: 250px;
-   height: 70px;
+.nav>ul>li:hover {
+   font-size: 40px;
+   color: coral;
+   transition: 0.4s;
+}
+
+.nav>ul>li:not(:hover) {
+   font-size: 30px;
+   transition: 0.7s;
+}
+
+.search-box {
+   background-color: #ffffff53;
+   font-size: 20px;
    display: flex;
+   padding: 0 10px;
+   height: 70px;
+   border-radius: 50px;
    justify-content: space-evenly;
    align-items: center;
-   color: white;
-   box-shadow: 0 0 109px rgba(0, 0, 0, 0.375);
+   color: rgb(255, 255, 255);
 }
 
-.sb>i {
-   margin: 20px;
-   font-size: 25px;
-}
-
-.sb>input {
-   width: 80%;
+.search-box>input, .search-box>input:focus {
+   position: static;
+   background: none;
+   outline: none;
+   width: 130px;
    height: 100%;
-   background-color: #ffffff00;
    border: none;
-   font-size: 20px;
-   text-transform: uppercase;
-   font-family: Poppins;
-   font-weight: 600;
+   font-size: 30px;
+   color: rgb(255, 255, 255);
 }
 
-.sb>input::placeholder {
+input::placeholder {
+   color: rgb(255, 255, 255);
+}
+
+.prof-pic {
+   grid-column: 3;
+   width: 60px;
+   height: 60px;
+}
+
+.prof-pic>p {
+   text-align: center;
+   margin-top: 10px;
    color: white;
+   font: 400 25px Poppins;
+}
+
+.prof-pic>img {
+   width: 100%;
+   height: 100%;
+   object-fit: cover;
+   border-radius: 50px;
 }
 
 aside {
@@ -111,6 +141,7 @@ aside>ul>li{
    align-items: center;
    padding: 10px;
    border-radius: 60px;
+   border-width: 0;
 }
 
 aside>ul>li:nth-child(6) {
@@ -119,8 +150,7 @@ aside>ul>li:nth-child(6) {
 
 
 .icone-selecionado {
-   border: 2px solid rgb(255, 255, 255);
+   border-bottom: 2px solid hsl(123, 100%, 84%);
    padding: 10px;
-   border-radius: 20px;
-   transition: padding 0.2s;
+   color: hsl(123, 100%, 84%);
 }
