--- a/style.css
+++ b/style.css
@@ -16,6 +16,7 @@
 
 html {
    font-family: Poppins, 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+   box-sizing: border-box;
 }
 
 body {
@@ -41,20 +42,20 @@ a {
 }
 
 .sidebar {
-   height: 97.9vh;
+   height: 100dvh;
    width: 250px;
    border-right: 2px solid var(--line-color);
    position: sticky;
-   padding: 10px 0;
    top: 0;
 }
 
 .sidebar>ul {
-   height: 98dvh;
+   height: 100%;
    padding: 0 10px;
 }
 
 .logo {
+   margin-top: 10px;
    color: var(--text-color);
    border-bottom: 1px solid var(--line-color);
    font-size: 16px;
@@ -64,8 +65,7 @@ a {
    padding: 0 15px;
 }
 
-.drop-button,
-.no-arrow-button {
+.button {
    border-radius: 9px;
    font-weight: 500;
    width: 100%;
@@ -79,17 +79,8 @@ a {
    padding: 15px;
 }
 
-.drop-button>p,
-.no-arrow-button>p {
+.button>p {
    margin-left: 10px;
-}
-
-.list-button:last-child {
-   margin-top: auto;
-}
-
-.drop-button>span:last-child {
-   margin-left: auto;
 }
 
 .sub-itens,
@@ -115,8 +106,7 @@ a {
 }
 
 .item:hover,
-.drop-button:hover,
-.no-arrow-button:hover {
+.button:hover {
    background-color: var(--background-color);
    transition: 0.5s;
 }
@@ -312,15 +302,23 @@ main {
    gap: 10px;
    flex-direction: column;
    border-radius: 30px;
+   color: var(--text-color);
+   text-align: center;
+}
+
+.list-container>h3 {
+   margin-bottom: 20px;
 }
 
 .container {
+   position: sticky;
+   bottom: 10%;
    width: 400px;
-   height: 150px;
-   padding: 20px;
+   height: auto;
+   padding: 20px 40px;
    background-color: var(--main-color);
    border: 2px solid var(--line-color);
-   border-radius: 30px 30px 10px 10px;
+   border-radius: 30px;
    display: flex;
    flex-direction: column;
    justify-content: end;
@@ -338,10 +336,12 @@ main {
    border-bottom: 2px solid var(--accent-color);
    font-size: 18px;
    color: var(--text-color);
+   transition: 200ms ease-in-out;
 }
 
 .text-adder:focus {
    outline: none;
+   width: 100%;
 }
 
 .action-button {
@@ -350,7 +350,7 @@ main {
    padding: 50px 20px;
    background-color: var(--accent-color);
    border: 2px solid var(--sec-accent-color);
-   border-radius: 10px 10px 30px 30px;
+   border-radius: 7px 7px 17px 17px;
    color: var(--text-color);
    font-size: 50px;
    font-weight: 700;
@@ -362,4 +362,85 @@ main {
 .action-button.clicked {
    background-color: var(--sec-accent-color);
    font-size: 48px;
+}
+
+.task-holder {
+   box-shadow: 0 0 10px var(--shadow-color);
+   border: 2px solid var(--line-color);
+   height: 200px;
+   overflow-y: scroll;
+   border-radius: 30px;
+   margin-bottom: 40px;
+   padding: 30px;
+   font: inherit;
+   color: var(--text-color);
+   scrollbar-width: none;
+}
+
+.task-holder::-webkit-scrollbar {
+   display: none;
+}
+
+.task-item {
+   display: flex;
+   align-items: center;
+   justify-content: start;
+   gap: 20px;
+   margin-top: 20px;
+}
+
+.task-checkbox {
+   appearance: none;
+   width: 30px;
+   height: 30px;
+   border: 2px solid var(--accent-color);
+   border-radius: 50px;
+   display: flex;
+   align-items: center;
+   justify-content: center;
+}
+
+.task-checkbox::after {
+   color: white;
+   font-weight: 900;
+   font-size: 15px;
+   margin: auto;
+   font-family: "Font Awesome 5 Free";
+   content: "\f00c";
+   display: flex;
+   align-items: center;
+   justify-content: center;
+   display: none;
+   align-items: center;
+}
+
+.task-checkbox:checked::after {
+   display: flex;
+}
+
+.task-checkbox:checked {
+   background-color: var(--accent-color);
+   border: 2px solid var(--accent-color);
+}
+
+.task-holder>h3 {
+   text-align: center;
+   padding-bottom: 1rem;
+   border-bottom: 2px solid var(--line-color);
+}
+
+.task-item > span, .task-checkbox {
+   cursor: pointer;
+}
+
+.task-item>p.completed {
+   text-decoration: line-through;
+   color: var(--sec-text-color);
+   font-style: italic;
+}
+
+.task-deleter {
+   color: var(--accent-color);;
+   margin-left: auto;
+   scale: 1.3;
 }
