--- a/style.css
+++ b/style.css
@@ -49,20 +49,35 @@ a {
    top: 0;
 }
 
+.sidebar>h3 {
+   color: var(--text-color);
+   text-align: center;
+}
+
 .sidebar>ul {
    height: 100%;
    padding: 0 10px;
 }
 
+.side-content li:first-child {
+   margin-top: 70px;
+}
+
 .logo {
-   margin-top: 10px;
+   position: absolute;
+   top: 10px;
+   left: 0;
    color: var(--text-color);
-   border-bottom: 1px solid var(--line-color);
-   font-size: 16px;
+   font-size: 1.3rem;
    display: flex;
    align-items: center;
    height: 40px;
-   padding: 0 15px;
+   padding: 3px 25px 10px 25px;
+}
+
+.sidebar .open-menu {
+   color: var(--text-color);
+   display: none;
 }
 
 .button {
@@ -84,59 +99,20 @@ a {
 }
 
 .sub-itens,
-.sidebar>ul,
-.list-button {
+.sidebar>ul {
    list-style: none;
    display: flex;
    flex-direction: column;
    gap: 4px;
 }
 
-.item {
-   border-radius: 9px;
-   font-weight: 500;
-   display: flex;
-   align-items: center;
-   height: 40px;
-   padding: 15px;
-}
-
 .sub-itens>li>a {
    color: var(--sec-text-color);
 }
 
-.item:hover,
 .button:hover {
    background-color: var(--background-color);
    transition: 0.5s;
-}
-
-.item:hover a {
-
-   color: var(--text-color);
-   transition: 0.5s;
-}
-
-.list-button>ul {
-   height: 0;
-   overflow: hidden;
-   transition: 0.5s;
-}
-
-.list-button>ul.show {
-   height: 200px;
-}
-
-.arrows.hide {
-   animation-name: spin-back;
-   animation-duration: 0.5s;
-
-}
-
-.arrows.show {
-   animation-name: spin;
-   animation-duration: 0.5s;
-   animation-fill-mode: forwards;
 }
 
 @keyframes spin {
@@ -311,7 +287,6 @@ main {
 }
 
 .container {
-   position: sticky;
    bottom: 10%;
    width: 400px;
    height: auto;
@@ -429,7 +404,8 @@ main {
    border-bottom: 2px solid var(--line-color);
 }
 
-.task-item > span, .task-checkbox {
+.task-item>span,
+.task-checkbox {
    cursor: pointer;
 }
 
@@ -440,7 +416,171 @@ main {
 }
 
 .task-deleter {
-   color: var(--accent-color);;
+   color: var(--accent-color);
+   ;
    margin-left: auto;
    scale: 1.3;
+}
+
+li span {
+   user-select: none;
+}
+
+@media screen and (max-width: 760px) {
+
+   body {
+      grid-template-columns: 1fr;
+   }
+
+   .sidebar span.open-menu {
+      display: flex;
+      user-select: none;
+      position: static;
+      justify-content: center;
+      align-items: center;
+      width: 50px;
+      height: 50px;
+      grid-column: 3;
+      font-size: 3rem;
+   }
+
+   .settings-menu {
+      box-sizing: border-box;
+      border-radius: 0;
+      width: 100dvw;
+      height: 80dvh;
+      
+   }
+
+   .overlay {
+      width: 100dvw;
+      height: 100dvh;
+      z-index: -2;
+   }
+
+   .list-container {
+      width: 100dvw;
+      border-radius: 0;
+   }
+
+   .task-holder {
+      box-sizing: border-box;
+      height: 300px;
+      box-shadow: none;
+      border-radius: 0;
+      width: 100dvw;
+   }
+   
+   .container {
+      box-sizing: border-box;
+      box-shadow: none;
+      border-radius: 0;
+      width: 100dvw;
+   }
+
+   .action-button {
+      width: 100dvw;
+      border-radius: 0;
+      border: none;
+      box-shadow: none;
+   }
+
+   .sidebar {
+      box-sizing: border-box;
+      padding: 0 30px;
+      position: fixed;
+      top: 0;
+      flex-direction: row;
+      display: grid;
+      grid-template-columns: 220px 1fr 50px;
+      width: 100dvw;
+      height: 80px;
+      justify-content: space-around;
+      align-items: center;
+      background-color: var(--main-color);
+      z-index: 1;
+   }
+
+   .sidebar>ul {
+      top: 80px;
+      box-sizing: border-box;
+      position: fixed;
+      overflow: hidden;
+      width: 100%;
+      padding: 0;
+      height: 0px;
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      justify-content: stretch;
+      background-color: var(--main-color);
+      transition: height 600ms;
+      width: 100dvw;
+      box-shadow: 0 5px 7px var(--shadow-color);
+   }
+   
+   .button:hover {
+      background-color: var(--main-color);
+   }
+   
+   .sidebar>ul>.list-button:nth-child(1) {
+      display: flex;
+      justify-content: center;
+      text-align: center;
+      margin-top: 80px;
+      justify-content: center;
+      padding: 40px 0;
+   }
+   
+   .button:hover,
+   .list-button:hover {
+      background-color: var(--background-color);
+   }
+   
+   .list-button {
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      width: 100%;
+      margin: 0;
+      text-align: center;
+      transition: 0s;
+      padding: 40px 0;
+      gap: 0;
+   }
+   
+   .task-item>span {
+      user-select: none;
+   }
+
+   .side-content button {
+      font-size: 2rem;
+   }
+   
+   .sidebar>ul.show-menu {
+      height: 400px;
+   }
+
+   .logo {
+      display: flex;
+      position: static;
+      padding: 0;
+      text-wrap: nowrap;
+      width: 220px;
+
+   }
+
+   .button {
+      width: auto;
+   }
+
+   main {
+      margin-top: 15%;
+   }
+}
+
+@media screen and (max-width: 500px) {
+   .sidebar {
+      padding: 0 10px;
+   }
 }
