--- a/style.css
+++ b/style.css
@@ -249,7 +249,7 @@ main {
 .overlay {
    position: absolute;
    z-index: -3;
-   height: 100%;
+   height: 100dvh;
    width: 100dvw;
    top: 0;
    left: 0;
